<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gameGridLayout"
        android:layout_width="395dp"
        android:layout_height="395dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/imageOne"
            android:onClick="dropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/imageTwo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            app:layout_column="1"
            app:layout_row="0"
            android:tag="1"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView3"
            android:contentDescription="@string/imageThree"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            app:layout_column="2"
            app:layout_row="0"
            android:tag="2"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView4"
            android:contentDescription="@string/imageFour"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            app:layout_column="0"
            app:layout_row="1"
            android:tag="3"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView5"
            android:contentDescription="@string/imageFive"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            app:layout_column="1"
            app:layout_row="1"
            android:tag="4"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView6"
            android:contentDescription="@string/imageSix"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            app:layout_column="2"
            app:layout_row="1"
            android:tag="5"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView7"
            android:contentDescription="@string/imageSeven"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            app:layout_column="0"
            app:layout_row="2"
            android:tag="6"
            android:onClick="dropIn" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/imageEight"
            android:onClick="dropIn"
            app:layout_column="1"
            android:tag="7"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView9"
            android:contentDescription="@string/imageNine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="40dp"
            app:layout_column="2"
            app:layout_row="2"
            android:tag="8"
            android:onClick="dropIn" />

    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginLeft="187dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="65dp"
        android:text="TextView"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gameGridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="13dp"
        android:onClick="playAgain"
        android:text="@string/buttonText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gameGridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerTextView" />
</android.support.constraint.ConstraintLayout>